# redimacs

./: README.md  pyproject.toml
redimacs/: apply_calibrations.py  binning.py  combine_calibrations.py  files_handling.py  plots.py  script.py  sky_modelling.py  wcs.py
